# h_rcm_vs

./: CMakeLists.txt  README.md  package.xml
config/: four_dof_params.yml  four_dof_params_stored_views.yml  four_dof_params_stored_views_nullspace.yml  four_dof_params_stored_views_real.yml  four_dof_params_stored_views_sim.yml  four_dof_params_stored_views_tilt_endoscope.yml  h_vs_params.yml  h_vs_params_stored_views.yml  h_vs_params_stored_views_tilt_endoscope.yml  rcm_params.yml  rcom_params.yml
config/decklink_storz_endoscope_calibrationdata/: ost.txt  ost.yaml  undistort.py
config/decklink_storz_tilt_endoscope_calibrationdata/: ost.txt  ost.yaml
include/h_rcm_vs/: h_rcm_vs_action_client.h  h_rcm_vs_action_server.h
include/h_rcom_vs/: h_rcom_vs_action_client.h  h_rcom_vs_action_server.h
launch/: decklink_storz_endoscope.launch  decklink_storz_tilt_endoscope.launch  h_rcm_calibration_pattern_vs.launch  h_rcm_endoscopy_calibration_pattern_vs.launch  h_rcm_endoscopy_stored_views_vs.launch  h_rcm_endoscopy_stored_views_vs_tilt_endoscope.launch  h_rcm_vs.launch  h_rcom_calibration_pattern_vs.launch  h_rcom_endoscopy_calibration_pattern_vs.launch  h_rcom_endoscopy_stored_views_vs.launch  h_rcom_vs.launch  rcm_init.launch  rcom_init.launch
src/: crop_undistort_image_node.cpp  h_rcm_vs_action_client.cpp  h_rcm_vs_client_node.cpp  h_rcm_vs_server_node.cpp  h_rcom_vs_action_client.cpp  h_rcom_vs_client_node.cpp  h_rcom_vs_server_node.cpp  rcm_init_node.cpp  rcom_init_node.cpp  undistort_image_node.cpp
