<?xml version="1.0"?>
<package format="2">
  <name>h_rcom_vs</name>
  <version>0.0.0</version>
  <description>The h_rcom_vs package implements a remote center of motion constrained homography based visual servo</description>

  <maintainer email="martin.huber@kcl.ac.uk">mhubii</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>eigen</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>rcom_impl</depend>
  <depend>rcom_msgs</depend>

  <exec_depend>nodelet</exec_depend>
  <exec_depend>image_proc</exec_depend>
  <exec_depend>h_vs</exec_depend>
  <exec_depend>lbr_endoscope_moveit</exec_depend>
  <exec_depend>decklink_ros</exec_depend>
</package>
